--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #b56bd0;
+    background-color: #2c3e50;
     min-height: 100vh;
     width: 100%;
 }
@@ -19,16 +19,16 @@ body {
     flex-direction: column;
     min-height: 400px;
     width: 400px;
-    background-color: white;
+    background-color: #ecf0f1;
     border-radius: 15px;
-    box-shadow: 2px 2px 10px 1px #333;
+    box-shadow: 2px 2px 10px 1px #1a252f;
     overflow: hidden;
-    padding: 10px;
+    padding: 15px;
     position: relative;
 }
 
 .heading-txt {
-    color: white;
+    color: #ffffff;
     font-size: 30px;
     font-weight: bold;
     margin: 10px;
@@ -38,9 +38,9 @@ body {
 
 .question {
     margin: 8px;
-    box-shadow: 0px 0px 10px 1px #a2a3a3;
+    box-shadow: 0px 0px 10px 1px #bdc3c7;
     border-radius: 5px;
-    padding: 5px;
+    padding: 10px;
     font-size: large;
     font-weight: 600;
     min-width: 100%;
@@ -48,6 +48,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #ffffff;
 }
 
 #question-number {
@@ -62,46 +63,47 @@ body {
     padding: 10px;
 }
 
-/* .option-container input{
-  visibility: hidden;    
-} */
 .option-btn {
-    box-shadow: 0px 0px 4px 1px rgb(128, 123, 123);
-    padding: 5px;
-    border-radius: 3px;
+    box-shadow: 0px 0px 4px 1px #7f8c8d;
+    padding: 8px;
+    border-radius: 5px;
     border: none;
     outline: none;
     transition: 0.3s;
     margin: 5px;
-    min-height: 30px;
-    background-color: white;
+    min-height: 35px;
+    background-color: #ffffff;
+    font-size: 16px;
+    font-weight: bold;
+    color: #2c3e50;
+    cursor: pointer;
 }
 
 .checked {
-    background-color: rgb(179, 83, 179);
+    background-color: #2980b9;
     color: white;
-    box-shadow: 3px 3px 4px 1px rgb(78, 69, 78);
+    box-shadow: 3px 3px 4px 1px #1a5276;
 }
 
 .option-btn:hover {
-    background-color: rgb(212, 118, 212);
+    background-color: #3498db;
     color: white;
 }
 
 #next-button {
     padding: 10px;
     border: none;
-    background-color: purple;
-    background-color: #276272;
+    background-color: #27ae60;
     color: white;
     border-radius: 5px;
-    box-shadow: 3px 3px 2px 1px rgb(127, 109, 109);
+    box-shadow: 3px 3px 2px 1px #145a32;
     font-size: larger;
     font-weight: bold;
     transition: 0.2s;
-    width: 100px;
+    width: 120px;
     position: absolute;
     bottom: 15px;
+    cursor: pointer;
 }
 
 #next-button:active {
@@ -113,4 +115,5 @@ body {
     top: 30%;
     font-size: 40px;
     text-align: center;
+    color: #2c3e50;
 }
